RESOLVED FIXED286200
<iframe> does not receive wheel events on iOS
https://bugs.webkit.org/show_bug.cgi?id=286200
Summary <iframe> does not receive wheel events on iOS
Lily Spiniolas
Reported 2025-01-17 22:02:36 PST
<iframe> does not receive wheel events on iOS
Attachments
Lily Spiniolas
Comment 1 2025-01-17 22:03:38 PST
Lily Spiniolas
Comment 2 2025-01-17 22:11:50 PST
EWS
Comment 3 2025-01-22 13:39:48 PST
Committed 289256@main (fb629be74044): <https://commits.webkit.org/289256@main> Reviewed commits have been landed. Closing PR #39244 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.