Unable to scroll through Notes, Mail, and Photos on iCloud.com using external mouse https://bugs.webkit.org/show_bug.cgi?id=286200 rdar://136683606

Reviewed by Tim Horton and Abrar Rahman Protyasha.

Prior to these changes, iOS did not pass wheel events to subframes,
which resulted in scrolling not working on iCloud.com.
The WK2 codepath in 'EventHandler::passWheelEventToWidget' for iOS
now behaves the same as its Mac counterpart, resulting in wheel
events being dispatched to subframes appropriately. The function's
other definitions were also updated to use RefPtrs instead of
raw pointers in the WK2 codepath.

To test these changes, 'WheelEventDispatchedToSubframe'
was added to WKScrollViewTests. The test sets a global
variable, which is updated by a wheel event listener
set by the iframe. A scroll is performed on the web
view, and if the global variable gets updated,
the test passes.

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::passWheelEventToWidget):
* Source/WebCore/page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::passWheelEventToWidget):
* Source/WebCore/page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::passWheelEventToWidget):
* Tools/TestWebKitAPI/Tests/ios/WKScrollViewTests.mm:
(TEST(WKScrollViewTests, WheelEventDispatchedToSubframe)):

Canonical link: https://commits.webkit.org/289256@main